--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -873,7 +873,8 @@ b, strong {
   /* ajustes finais */
   h1, h2, h3, h4, h5, h6 {
     color: #783a2e;
-    font-weight: 400;
+    font-weight: 500;
+    letter-spacing: -0.3px;
   }
   p {
     font-weight: 500;
@@ -888,13 +889,21 @@ b, strong {
   }
   .header_form label {
     font-size: 14px;
+    font-weight: 600;
   }
   .header_text {
     font-size: 14px;
+    font-weight: 600;
   }
   .header_input {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 14px;
+  }
+  .header_link {
+    background: #f2917e;
+  }
+  .header_input::placeholder {
+    font-weight: 500;
   }
 }
 @media (max-width: 425px) {}
